--- a/src/first.mdx
+++ b/src/first.mdx
@@ -1,19 +1,33 @@
 ---
-title: 'Не с того не с сего телефон превратился в кирпич'
+title: 'Перый пост'
 image: 'first-0.png'
 date:
-  day: 20
+  day: 21
   month: 4
   year: 2024
-tags: ['iphone', 'кирпич']
+tags: ['iphone', 'новый']
 ---
 
-# Не с того не с сего телефон превратился в кирпич
 
-> «Не с того не с сего телефон превратился в кирпич» — с такими словами пришел к нам клиент.
+We recommend using **Static Generation** (with and without data) whenever possible because your page can be built once and served by CDN, which makes it much faster than having a server render the page on every request.
 
-> «Ну хоть в одноклассники зайду наконец» — а с такими покинул наш сервис.
+```ts
+const sum = (num1: number, num2: number): number => {
+    return num1 + num2
+}
 
-Что же все таки произошло и с чем пришлось столкнуться нашим мастерам.. давайте разбираться
+console.log(sum(4,8)) //12
+```
 
-Исходя из своей неопытности в серфинге по интернет площадкам, мужчина скачал файл/приложение, которое гуляло под ручку с вирусом, звучит страшно, правда?
+You can use Static Generation for many types of pages, including:
+
+- Marketing pages
+- Blog posts
+- E-commerce product listings
+- Help and documentation
+
+You should ask yourself: "Can I pre-render this page **ahead** of a user's request?" If the answer is yes, then you should choose Static Generation.
+
+On the other hand, Static Generation is **not** a good idea if you cannot pre-render a page ahead of a user's request. Maybe your page shows frequently updated data, and the page content changes on every request.
+
+In that case, you can use **Server-Side Rendering**. It will be slower, but the pre-rendered page will always be up-to-date. Or you can skip pre-rendering and use client-side JavaScript to populate data.
