--- a/src/first.mdx
+++ b/src/first.mdx
@@ -105,17 +105,9 @@ Start numbering with offset:
 
 Inline `code`
 
-```
-// Some comments
-line 1 of code
-line 2 of code
-line 3 of code
-```
-
-
 Block code "fences"
 
-```
+```plaintext
 Sample text here...
 ```
 
