--- a/src/first.mdx
+++ b/src/first.mdx
@@ -113,7 +113,7 @@ Sample text here...
 
 Syntax highlighting
 
-``` js
+```javascript
 var foo = function (bar) {
   return bar++;
 };
@@ -157,5 +157,3 @@ Like links, Images also have a footnote style syntax
 ![Alt text][id]
 
 With a reference later in the document defining the URL location:
-
-[id]: https://octodex.github.com/images/dojocat.jpg  "The Dojocat"
