--- a/src/first.mdx
+++ b/src/first.mdx
@@ -92,3 +92,5 @@ console.log(double(2)) // 4
 
 ![Minion](https://octodex.github.com/images/minion.png)
 ![Stormtroopocat](https://octodex.github.com/images/stormtroopocat.jpg "The Stormtroopocat")
+
+<CustomImage src="first-0.jpg" width="569" height="898" alt="телефон" />
