--- a/src/first.mdx
+++ b/src/first.mdx
@@ -88,6 +88,23 @@ const double = (n: number) => n * 2;
 console.log(double(2)) // 4
 ```
 
+## Footnote
+
+A note[^1]
+
+[^1]: Big note.
+
+## Table
+
+| a | b  |  c |  d  |
+| - | :- | -: | :-: |
+| 1 | 2  | 3  | 4   |
+
+## Tasklist
+
+* [ ] to do
+* [x] done
+
 ## Images
 
 ![Minion](https://octodex.github.com/images/minion.png)
