--- a/src/brick-phone.mdx
+++ b/src/brick-phone.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Не с того не с сего телефон превратился в кирпич'
 image: 'brick-phone-0.jpg'
-description: 'В этом посте мы расскажем вам о том, к чему может привести падение телефона и способы решения данной проблемы...'
+description: 'В этом посте мы расскажем вам о том, к чему может привести падение телефона и способы решения данной проблемы'
 date:
   day: 24
   month: 2
