--- a/src/playstation-doesnt-connect-to-tv.mdx
+++ b/src/playstation-doesnt-connect-to-tv.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Почему Sony PlayStation не подключается к телевизору'
 image: 'playstation-doesnt-connect-to-tv-0.png'
-description: 'Сегодня мы рассмотрим весьма популярную и актуальную неполадку – когда плейстейшен не подключается к телевизору....'
+description: 'Сегодня мы рассмотрим весьма популярную и актуальную неполадку – когда плейстейшен не подключается к телевизору'
 date:
   day: 7
   month: 12
